--- a/setup.cfg
+++ b/setup.cfg
@@ -21,3 +21,7 @@ python_requires = >=3.7
 
 [options.packages.find]
 where = src
+
+[options.entry_points]
+console_scripts =
+    templater = templater.__main__:app
