--- a/setup.cfg
+++ b/setup.cfg
@@ -17,6 +17,9 @@ classifiers =
 package_dir =
     = src
 packages = find:
+install_requires =
+    typer
+    rich
 python_requires = >=3.7
 
 [options.packages.find]
