--- a/setup.cfg
+++ b/setup.cfg
@@ -1,12 +1,12 @@
 [metadata]
-name = templater
+name = py-templater
 version = 0.1.0
 author = Ekansh Agrawal
 author_email = agrawalekansh@berkely.edu
 description = utility tool the generates code files from user-defined templates
 long_description = file: README.md
 long_description_content_type = text/markdown
-url = https://github.com/h3x4g0ns/templater/tree/main
+url = https://github.com/h3x4g0ns/py-templater/tree/main
 keywords = python, template, cli
 classifiers =
     Programming Language :: Python :: 3
@@ -27,4 +27,4 @@ where = src
 
 [options.entry_points]
 console_scripts =
-    templater = templater.__main__:app
+    templater = py_templater.__main__:app
