--- a/setup.cfg
+++ b/setup.cfg
@@ -1,12 +1,12 @@
 [metadata]
 name = py-templater
-version = 0.1.3
+version = 0.1.4
 author = Ekansh Agrawal
-author_email = agrawalekansh@berkely.edu
+author_email = agrawalekansh@berkeley.edu
 description = utility tool the generates code files from user-defined templates
 long_description = file: README.md
 long_description_content_type = text/markdown
-url = https://github.com/h3x4g0ns/py-templater/tree/main
+url = https://github.com/h3x4g0ns/py-templater/tree/master
 keywords = python, template, cli
 classifiers =
     Programming Language :: Python :: 3
