--- a/setup.cfg
+++ b/setup.cfg
@@ -1,9 +1,9 @@
 [metadata]
 name = py-templater
-version = 0.1.4
+version = 0.1.5
 author = Ekansh Agrawal
 author_email = agrawalekansh@berkeley.edu
-description = utility tool the generates code files from user-defined templates
+description = utility tool that generates code files from user-defined templates
 long_description = file: README.md
 long_description_content_type = text/markdown
 url = https://github.com/h3x4g0ns/py-templater/tree/master
